lab5/test/96-unterminated.oc.valgrind
==6700== Memcheck, a memory error detector
==6700== Copyright (C) 2002-2017, and GNU GPL'd, by Julian Seward et al.
==6700== Using Valgrind-3.13.0 and LibVEX; rerun with -h for copyright info
==6700== Command: ../oc 96-unterminated.oc
==6700== 
96-unterminated.oc:6:15: warning: missing terminating " character
    string s = "abc;
               ^
96-unterminated.oc:7:13: warning: missing terminating ' character
    char c = 'a;
             ^
96-unterminated.oc:8:8: warning: missing terminating " character
    s = "abcd\";
        ^
96-unterminated.oc:9:8: warning: missing terminating " character
    s = "abc|\
        ^
@G¸:5.15: invalid token ("\*/")
@G¸:5.20: syntax error, unexpected ';'
@G¸:6.15: invalid token ("abc;)
@G¸:7.9: syntax error, unexpected TOK_IDENT
@G¸:7.13: invalid token ('a;)
@G¸:8.8: invalid token ("abcd\";)
@G¸:9.8: invalid token ("abc|   ;)
@G¸:11.8: invalid token (23foobar)
==6700== 
==6700== HEAP SUMMARY:
==6700==     in use at exit: 0 bytes in 0 blocks
==6700==   total heap usage: 82 allocs, 82 frees, 113,223 bytes allocated
==6700== 
==6700== All heap blocks were freed -- no leaks are possible
==6700== 
==6700== For counts of detected and suppressed errors, rerun with: -v
==6700== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
